board/rpi4_64_router/rootfs_overlay/etc/ip6tables.rules
# Generated by ip6tables-save v1.8.3 on Thu Jan  1 02:24:27 1970
*filter
# Default to accept everything
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8:1082]
# Accept packets of already established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Accept all ICMPv6 packets
-A INPUT -p ipv6-icmp -j ACCEPT
# Accept all lo interface traffic
-A INPUT -i lo -j ACCEPT
# Accept DHCPv6 traffic
-A INPUT -d fe80::/64 -p udp -m udp --dport 546 -m state --state NEW -j ACCEPT
# Accept all traffic coming in from eth1, eth2, and wlan0
-A INPUT -i eth1 -j ACCEPT
-A INPUT -i eth2 -j ACCEPT
-A INPUT -i wlan0 -j ACCEPT
# Anything that didn't pass the above rules is rejected
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited
# Accept all forwarded packets coming from eth1, eth2, and wlan0
-A FORWARD -i eth1 -j ACCEPT
-A FORWARD -i eth2 -j ACCEPT
-A FORWARD -i wlan0 -j ACCEPT
# Accept all forwarded packets of already established connections
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
# Accept all forwarded ICMPv6 packets
-A FORWARD -p ipv6-icmp -j ACCEPT
# Anything that didn't pass the above rules is rejected
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Thu Jan  1 02:24:27 1970
