board/rpi4_64_router/rootfs_overlay/etc/iptables.rules
# Generated by iptables-save v1.8.3 on Thu Jan  1 00:35:09 1970
*nat
:PREROUTING ACCEPT [2396:162882]
:INPUT ACCEPT [1017:82166]
:OUTPUT ACCEPT [479:35096]
:POSTROUTING ACCEPT [3:1008]
# Perform NAT on packets going out eth0
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Jan  1 00:35:09 1970
# Generated by iptables-save v1.8.3 on Thu Jan  1 00:35:09 1970
*filter
# Default to accept everything
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37:3432]
# Accept packets of already established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Accept all ICMP packets
-A INPUT -p icmp -j ACCEPT
# Accept all lo interface traffic
-A INPUT -i lo -j ACCEPT
# Accept all traffic coming in from eth1, eth2, and wlan0
-A INPUT -i eth1 -j ACCEPT
-A INPUT -i eth2 -j ACCEPT
-A INPUT -i wlan0 -j ACCEPT
# Anything that didn't pass the above rules is rejected
-A INPUT -j REJECT --reject-with icmp-admin-prohibited
# Accept all forwarded packets coming from eth1, eth2, and wlan0
-A FORWARD -i eth1 -j ACCEPT
-A FORWARD -i eth2 -j ACCEPT
-A FORWARD -i wlan0 -j ACCEPT
# Accept all forwarded packets of already established connections
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
# Anything that didn't pass the above rules is rejected
-A FORWARD -j REJECT --reject-with icmp-admin-prohibited
COMMIT
# Completed on Thu Jan  1 00:35:09 1970
